--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: DnA Photography # Or your preferred site title for the browser tab
 
 .gallery img {
   width: 100%; /* Make image take full width of its grid cell */
-  height: 200px; /* Set a fixed height, or use aspect-ratio for responsive height */
+  /* Set a fixed height, or use aspect-ratio for responsive height */
   object-fit: cover; /* Crop to fit, maintaining aspect ratio */
   border: 1px solid #ddd;
   border-radius: 4px; /* Slightly rounded corners */
