--- a/index.html
+++ b/index.html
@@ -51,26 +51,25 @@ title: DnA Photography # Or your preferred site title for the browser tab
 
   /* Improved Gallery Styles */
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 15px; /* Space between items */
-  padding: 15px; /* Padding around the gallery */
+  column-count: 4; /* Start with 4 columns, adjust as needed */
+  column-gap: 10px; /* Space between columns */
+  padding: 10px; /* Padding around the gallery */
 }
 
 .gallery img {
-  width: 100%; /* Make image take full width of its grid cell */
-  /* Set a fixed height, or use aspect-ratio for responsive height */
-  object-fit: cover; /* Crop to fit, maintaining aspect ratio */
+  width: 100%; /* Image will fill the width of its column */
+  height: auto;  /* Height will adjust to maintain aspect ratio */
+  display: block; /* Prevents extra space below images */
+  margin-bottom: 10px; /* Space below each image before the next one in the column */
   border: 1px solid #ddd;
-  border-radius: 4px; /* Slightly rounded corners */
-  display: block; /* Remove extra space below image */
-  transition: transform 0.3s ease-in-out; /* For smooth hover effect later */
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
 }
 
 /* For the hover effect */
 .gallery img:hover {
-  transform: scale(1.05); /* Make image 105% of its size on hover */
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Optional: add a slight shadow */
+  transform: scale(1.45); /* Make image 105% of its size on hover */
+  box-shadow: 0 4px 8px rgba(1,0,0,0.2); /* Optional: add a slight shadow */
   z-index: 10; /* Optional: bring it to the front if overlapping */
   position: relative; /* Needed for z-index to work properly in some cases */
 }
