--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ main.container-md {
 
 /* For the hover effect */
 .gallery img:hover {
-  transform: scale(1.07); /* Make image 105% of its size on hover */
+  transform: scale(1.05); /* Make image 105% of its size on hover */
   box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* Optional: add a slight shadow */
   z-index: 10; /* Optional: bring it to the front if overlapping */
   position: relative; /* Needed for z-index to work properly in some cases */
@@ -170,7 +170,7 @@ main.container-md {
 
 <div class="cover-section">
   <!-- You can put a title on your cover image if you want -->
-  <!-- <h1>DnA Photography</h1> -->
+  <!-- <h1>DnA</h1> -->
 </div>
 
 <div class="content-switcher">
